Implement findBookByBookIuuseId route
